# unsafe-rs

./: Cargo.toml  README.md  sqlx-data.json
src/: commands.rs  db.rs  handler.rs  main.rs  tick.rs  utils.rs
src/commands/: curse.rs  help.rs
src/db/: cursedb.rs
