  [package]
  name = "unsafe-rs"
  version = "0.1.0"
  edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

  [dependencies]
  tokio = { version = "1.28.1", features = ["macros","rt-multi-thread"] }
  serenity = {default_features = false, features = ["client","gateway","model","rustls_backend","collector","utils","builder","cache","http",], version = "0.11.5"}
  rand = "0.8.5"
  chrono = "0.4.24"
  sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "offline"]}
